# cc_approver

./: .gitignore  CLAUDE.md  README.md  bench_reason.py  pyproject.toml  test_policy.py  test_policy_merge.py
.claude/: settings.local.json.bak
.claude/hooks/: cc_approver_hook.py
cc_approver/: __init__.py  __main__.py  approver.py  cli.py  constants.py  discovery.py  hook.py  models.py  optimizer.py  settings.py  tui.py  validators.py
examples/: sample_training.jsonl
tests/: __init__.py  conftest.py  test_approver.py  test_cli.py  test_cli_commands.py  test_comprehensive_e2e.py  test_end_to_end.py  test_hook.py  test_hook_preservation.py  test_integration.py  test_main.py  test_models.py  test_optimize_e2e.py  test_optimizer.py  test_optimizer.py.backup  test_settings.py  test_tui.py
tests/fixtures/: sample_settings.json  train_data.jsonl
